# zoxi

./: .gitignore  Cargo.toml  DOC.md  LICENSE  README.md
examples/hello/src/: main.zo
examples/iterators/src/: main.zo
src/: main.rs
src/app/: mod.rs  startup.rs
src/cargo/: command.rs  mod.rs  options.rs  runner.rs
src/cli/: args.rs  cli.rs  mod.rs
src/project/: cache.rs  discover.rs  file_sync.rs  hash.rs  manifest.rs  mod.rs  paths.rs
src/transpiler/: engine.rs  error.rs  mod.rs  transpiler.rs
src/transpiler/compiler/: ast.rs  generator.rs  lexer.rs  mod.rs  parser.rs  pipeline.rs  semantics.rs
src/transpiler/compiler/generator/: entry.rs  expr.rs  items.rs  iterators.rs  mod.rs  strings.rs  types.rs
src/transpiler/compiler/parser/: entry.rs  error.rs  expr.rs  items.rs  mod.rs  path.rs  tokens.rs  types.rs
src/transpiler/source/: collections.rs  functions.rs  iterators.rs  keywords.rs  literals.rs  mod.rs  pipeline.rs  scan.rs
