[package]
name = "zoxi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
chumsky = "0.12.0"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
logos = "0.16.1"
rustc-hash = "2.1.2"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = "3.3.0"
walkdir = "2.5.0"
